/// Please use the following editor setup for this file:

// Tab size=4; Tabs as spaces; Clean up trailing whitepsace
// 'make proto' will run clang-format to fix formatiing
syntax = "proto3";
package neuralNetwork;

option go_package = "github.com/binuud/ai-green-field/gen/go/v1/neuralNetwork";

import "google/protobuf/timestamp.proto";

message TrainingAction {
  enum TrainingActionEnum {
    TrainingActionIgnore = 0;
    New = 1;   // Starts training fresh, by resetting the models
    Start = 2; // Starts from a previously paused position
    Pause = 3; // Pauses the Training
    Stop = 4;  // Stops the Training
    GetTrainingData = 5;
    GetTestingData = 6;
    GetPrediction = 7;
  }
  TrainingActionEnum action = 1;
}

message TrainingData {
  repeated float x = 1;
  repeated float y = 2;
}

message Prediction { repeated float y = 1; }

message ModelState {

  enum TrainingStateEnum {
    TrainingStateIgnore = 0;
    New = 1;
    Running = 2;
    Error = 3;
    Pause = 4;
    Completed = 5;
    Stopped = 6;
  }

  // Current training state
  TrainingStateEnum status = 2;

  // current run state, the epoch iteration run which is currently running
  int32 currentEpoch = 3;

  float trainingLoss = 10;
  float testLoss = 11;

  google.protobuf.Timestamp createdAt = 22;
  google.protobuf.Timestamp updatedAt = 23;
}

message ModelConfig {

  enum ModelTypeEnum {
    ModelTypeIgnore = 0;
    Classification = 1;
    Regression = 2;
  }

  enum ActivationFunctionEnum {
    ActivationFunctionIgnore = 0;
    ActivationFunctionNone = 1;
    Relu = 2;
    Sigmoid = 3;
    Tanh = 4;
    Linear = 5;
  }

  enum RegularizationEnum {
    RegularizationIgnore = 0;
    L1 = 1;
    L2 = 2;
    Dropout = 3;
    RegularizationNone = 4;
  }

  string name = 1;
  string description = 2;
  // Learning rate
  float learningRate = 5;
  // Number of training epochs
  int32 epochs = 6;

  // number of epochs to run, and return state to UI
  // Traning runs and pauses after epochBatch number of runs
  // waiting for user input
  int32 epochBatch = 7;

  // Activation function type (e.g., "relu", "sigmoid", "tanh")
  ActivationFunctionEnum activationFunction = 8;

  // Regularization type (e.g., "l1", "l2", "dropout", "none")
  RegularizationEnum regularization = 9;

  // Regularization strength/coefficient
  float regularizationRate = 10;

  ModelTypeEnum trainingType = 11;

  // number of inputs
  int64 seed = 15;
  int32 numInputs = 16;

  // number of outputs
  int32 numOutputs = 17;

  // number of hidden layers
  int32 numLayers = 18;
}

message Model {
  // uuid to keep track of different training runs
  string uuid = 1;
  ModelState state = 5;
  ModelConfig config = 6;
  LinearRegressionModel linearModel = 10;
}

message LinearRegressionModel {
  float Weight = 1;
  float Bias = 2;
}
